// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component:  players and states component can quit in playing phase: round over version 1 1`] = `
<app-players-and-states
  actions={[Function MockBoostrapActions]}
  game={[Function TSBGame]}
  gameCache={[Function MockGameCacheService]}
  groupCollapsed={[Function Object]}
  groupIcons={[Function Object]}
  groupPlayers={[Function Object]}
  groups={[Function Array]}
  player={[Function Player]}
  playerService={[Function MockPlayerService]}
  route={[Function Object]}
  showAccept="false"
  showQuit={[Function Boolean]}
  showReject="false"
  showRematch="false"
>
  <div
    class="player-list"
  >
    
    
    
    
    
    
    
    
    <div
      class="player-actions"
    >
      
      
      
      
      
      
      
      
      
      <button
        class="btn btn-quit-game"
      >
        
        Quit Game
      
      </button>
      
      
      
      
      
      
      
    
    </div>
    
    
    
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Pending"
      >
        
        
        <button
          class="list-group-item btn-players-group-Pending"
        >
          
          
          <span
            class="fa fa-question"
          />
          
          Pending
          
          <span
            class="badge"
          >
            2
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Pending"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Pending"
          >
            
            
            <img
              class="player-image"
              src="http://thenetwork.com/url?33f.img"
            />
            
            
            <span
              class="player-name"
            >
              p3
            </span>
            
          
          </li>
          <li
            class="list-group-item list-group-item-player list-group-item-player-Pending"
          >
            
            
            <img
              class="player-image"
              src=""
            />
            
            
            <span
              class="player-name"
            >
              me
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Accepted"
      >
        
        
        <button
          class="list-group-item btn-players-group-Accepted"
        >
          
          
          <span
            class="fa fa-thumbs-up"
          />
          
          Accepted
          
          <span
            class="badge"
          >
            1
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Accepted"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Accepted"
          >
            
            
            <img
              class="player-image"
              src="/assets/avatars/maleprofile.png"
            />
            
            
            <span
              class="player-name"
            >
              p1
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Rejected"
      >
        
        
        <button
          class="list-group-item btn-players-group-Rejected"
        >
          
          
          <span
            class="fa fa-"
          />
          
          Rejected
          
          <span
            class="badge"
          >
            1
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Rejected"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Rejected"
          >
            
            
            <img
              class="player-image"
              src="/p2.img"
            />
            
            
            <span
              class="player-name"
            >
              p2
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      
      
      <div
        class="list-group-hidden collapse show"
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Quit"
        >
          
          
          
          
        
        </div>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  
</app-players-and-states>
`;

exports[`Component:  players and states component can quit in setup phase: round over version 1 1`] = `
<app-players-and-states
  actions={[Function MockBoostrapActions]}
  game={[Function TSBGame]}
  gameCache={[Function MockGameCacheService]}
  groupCollapsed={[Function Object]}
  groupIcons={[Function Object]}
  groupPlayers={[Function Object]}
  groups={[Function Array]}
  player={[Function Player]}
  playerService={[Function MockPlayerService]}
  route={[Function Object]}
  showAccept="false"
  showQuit={[Function Boolean]}
  showReject="false"
  showRematch="false"
>
  <div
    class="player-list"
  >
    
    
    
    
    
    
    
    
    <div
      class="player-actions"
    >
      
      
      
      
      
      
      
      
      
      <button
        class="btn btn-quit-game"
      >
        
        Quit Game
      
      </button>
      
      
      
      
      
      
      
    
    </div>
    
    
    
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Pending"
      >
        
        
        <button
          class="list-group-item btn-players-group-Pending"
        >
          
          
          <span
            class="fa fa-question"
          />
          
          Pending
          
          <span
            class="badge"
          >
            2
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Pending"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Pending"
          >
            
            
            <img
              class="player-image"
              src="http://thenetwork.com/url?33f.img"
            />
            
            
            <span
              class="player-name"
            >
              p3
            </span>
            
          
          </li>
          <li
            class="list-group-item list-group-item-player list-group-item-player-Pending"
          >
            
            
            <img
              class="player-image"
              src=""
            />
            
            
            <span
              class="player-name"
            >
              me
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Accepted"
      >
        
        
        <button
          class="list-group-item btn-players-group-Accepted"
        >
          
          
          <span
            class="fa fa-thumbs-up"
          />
          
          Accepted
          
          <span
            class="badge"
          >
            1
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Accepted"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Accepted"
          >
            
            
            <img
              class="player-image"
              src="/assets/avatars/maleprofile.png"
            />
            
            
            <span
              class="player-name"
            >
              p1
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Rejected"
      >
        
        
        <button
          class="list-group-item btn-players-group-Rejected"
        >
          
          
          <span
            class="fa fa-"
          />
          
          Rejected
          
          <span
            class="badge"
          >
            1
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Rejected"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Rejected"
          >
            
            
            <img
              class="player-image"
              src="/p2.img"
            />
            
            
            <span
              class="player-name"
            >
              p2
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      
      
      <div
        class="list-group-hidden collapse show"
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Quit"
        >
          
          
          
          
        
        </div>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  
</app-players-and-states>
`;

exports[`Component:  players and states component can rematch or declined rematch in round over phase: round over version 1 1`] = `
<app-players-and-states
  actions={[Function MockBoostrapActions]}
  game={[Function TSBGame]}
  gameCache={[Function MockGameCacheService]}
  groupCollapsed={[Function Object]}
  groupIcons={[Function Object]}
  groupPlayers={[Function Object]}
  groups={[Function Array]}
  player={[Function Player]}
  playerService={[Function MockPlayerService]}
  route={[Function Object]}
  showAccept="false"
  showQuit="false"
  showReject="false"
  showRematch={[Function Boolean]}
>
  <div
    class="player-list"
  >
    
    
    
    
    
    
    
    
    <div
      class="player-actions"
    >
      
      
      
      
      
      
      
      
      
      
      
      
      <button
        class="btn btn-rematch-game"
      >
        
        Rematch!
      
      </button>
      
      
      
      <button
        class="btn btn-end-rematch-game"
      >
        
        No More Rematches
      
      </button>
      
    
    </div>
    
    
    
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Pending"
      >
        
        
        <button
          class="list-group-item btn-players-group-Pending"
        >
          
          
          <span
            class="fa fa-question"
          />
          
          Pending
          
          <span
            class="badge"
          >
            2
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Pending"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Pending"
          >
            
            
            <img
              class="player-image"
              src="http://thenetwork.com/url?33f.img"
            />
            
            
            <span
              class="player-name"
            >
              p3
            </span>
            
          
          </li>
          <li
            class="list-group-item list-group-item-player list-group-item-player-Pending"
          >
            
            
            <img
              class="player-image"
              src=""
            />
            
            
            <span
              class="player-name"
            >
              me
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Accepted"
      >
        
        
        <button
          class="list-group-item btn-players-group-Accepted"
        >
          
          
          <span
            class="fa fa-thumbs-up"
          />
          
          Accepted
          
          <span
            class="badge"
          >
            1
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Accepted"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Accepted"
          >
            
            
            <img
              class="player-image"
              src="/assets/avatars/maleprofile.png"
            />
            
            
            <span
              class="player-name"
            >
              p1
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Rejected"
      >
        
        
        <button
          class="list-group-item btn-players-group-Rejected"
        >
          
          
          <span
            class="fa fa-"
          />
          
          Rejected
          
          <span
            class="badge"
          >
            1
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Rejected"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Rejected"
          >
            
            
            <img
              class="player-image"
              src="/p2.img"
            />
            
            
            <span
              class="player-name"
            >
              p2
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      
      
      <div
        class="list-group-hidden collapse show"
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Quit"
        >
          
          
          
          
        
        </div>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  
</app-players-and-states>
`;

exports[`Component:  players and states component pending accept from player not in phase to accept: round over version 1 1`] = `
<app-players-and-states
  actions={[Function MockBoostrapActions]}
  game={[Function TSBGame]}
  gameCache={[Function MockGameCacheService]}
  groupCollapsed={[Function Object]}
  groupIcons={[Function Object]}
  groupPlayers={[Function Object]}
  groups={[Function Array]}
  player={[Function Player]}
  playerService={[Function MockPlayerService]}
  route={[Function Object]}
  showAccept="false"
  showQuit="false"
  showReject="false"
  showRematch="false"
>
  <div
    class="player-list"
  >
    
    
    
    
    
    
    
    
    <div
      class="player-actions"
    >
      
      
      
      
      
      
      
      
      
      
      
      
      
      
      
      
    
    </div>
    
    
    
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Pending"
      >
        
        
        <button
          class="list-group-item btn-players-group-Pending"
        >
          
          
          <span
            class="fa fa-question"
          />
          
          Pending
          
          <span
            class="badge"
          >
            2
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Pending"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Pending"
          >
            
            
            <img
              class="player-image"
              src="http://thenetwork.com/url?33f.img"
            />
            
            
            <span
              class="player-name"
            >
              p3
            </span>
            
          
          </li>
          <li
            class="list-group-item list-group-item-player list-group-item-player-Pending"
          >
            
            
            <img
              class="player-image"
              src=""
            />
            
            
            <span
              class="player-name"
            >
              me
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Accepted"
      >
        
        
        <button
          class="list-group-item btn-players-group-Accepted"
        >
          
          
          <span
            class="fa fa-thumbs-up"
          />
          
          Accepted
          
          <span
            class="badge"
          >
            1
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Accepted"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Accepted"
          >
            
            
            <img
              class="player-image"
              src="/assets/avatars/maleprofile.png"
            />
            
            
            <span
              class="player-name"
            >
              p1
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      <div
        class="list-group list-group-players-group list-players-group-Rejected"
      >
        
        
        <button
          class="list-group-item btn-players-group-Rejected"
        >
          
          
          <span
            class="fa fa-"
          />
          
          Rejected
          
          <span
            class="badge"
          >
            1
          </span>
          
        
        </button>
        
      
      </div>
      
      
      <div
        class=""
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Rejected"
        >
          
          
          
          <li
            class="list-group-item list-group-item-player list-group-item-player-Rejected"
          >
            
            
            <img
              class="player-image"
              src="/p2.img"
            />
            
            
            <span
              class="player-name"
            >
              p2
            </span>
            
          
          </li>
          
        
        </div>
        
      
      </div>
      
    
    </div>
    <div>
      
      
      
      
      
      <div
        class="list-group-hidden collapse show"
        ng-reflect-collapsed="false"
      >
        
        
        <div
          class="list-group list-group-players list-group-players-Quit"
        >
          
          
          
          
        
        </div>
        
      
      </div>
      
    
    </div>
    
  
  </div>
  
</app-players-and-states>
`;
